Codes have been formatted (option + command + L)